Firefox fix to bypass the transparency issue on Firefox browsers

--- a/css/core.css
+++ b/css/core.css
@@ -334,6 +334,11 @@ a[href*=" ?"]:after {
 /* Alt is done with jquery global selector on load */
 .altText img { min-height: 44px; min-width: 44px; box-shadow: inset 0 0 1px #b7b6b6, inset 0 0 15px rgba(255, 0, 255, 0.3); position: relative; }
 .altText img:before { position: absolute; top: 0; left: 0; content: " "; background: url(https://currys-ssl.cdn.dixons.com/css/themes/email/Assets/emailTool/imgBG3.png); width: 100%; height: 100%; }
+
+@-moz-document url-prefix() {
+  .altText img { -webkit-text-fill-color: inherit; }
+}
+
 .sImg img { border: 1px solid red!important; box-sizing: border-box; }
 
 .altText .fauxImg:after {
